# haskell-aoc-2024

./: .editorconfig  .gitignore  haskell-aoc2024.cabal
day00/: Main.hs
day01/: Main.hs
lib/: Lib.hs
