cabal-version:      3.0
name:               haskell-aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tony Bradley
maintainer:         antbradley91@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.3.0,
        relude == 1.2.2.2,
        parsec == 3.1.17.0
    hs-source-dirs:   lib
    default-language: GHC2021

executable day00
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        relude == 1.2.2.2,
        parsec == 3.1.17.0,
        haskell-aoc2024
    hs-source-dirs:   day00
    default-language: GHC2021

executable day01
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        relude == 1.2.2.2,
        parsec == 3.1.17.0,
        haskell-aoc2024
    hs-source-dirs:   day01
    default-language: GHC2021
